added settings API, bumped version
